<resources>
    <string name="app_name">NOTEAPP</string>

    <string name="search_here">Search here.....</string>
    <string name="clear">clear</string>
    <string name="no_data">no_data</string>
    <string name="add_note">Add Note</string>
    <string name="choose_color">Choose Color</string>
    <string name="some_text">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged.
    </string>
    <string name="edited_on">Edited on: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="note_list_description">Danh sách ghi chú</string>
    <string name="no_data_description">Không có ghi chú nào</string>
    <string name="add_note_description">Thêm ghi chú mới</string>
</resources>