<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.noteapp.fragments.NoteFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        android:id="@+id/app_bar_layout">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/app_title"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="@string/app_name"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_title"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="15dp">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:id="@+id/search"
                        android:background="@drawable/rounded_search"
                        android:drawableStart="@drawable/ic_round_search"
                        android:drawablePadding="5dp"
                        android:imeOptions="actionSearch"
                        android:hint="@string/search_here"
                        android:paddingStart="18dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="18dp"
                        android:paddingBottom="5dp"
                        android:textSize="16sp"
                        android:importantForAutofill="no"
                        android:inputType="textFilter"
                        android:layout_weight="3" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rvNote"
        android:paddingStart="6dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="5dp"
        android:transitionGroup="true"
        android:contentDescription="@string/note_list_description"
        tools:listitem="@layout/note_item_layout">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/noData"
            android:src="@drawable/ic_no_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/no_data_description"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:id="@+id/add_note_fab"
        android:focusable="true"
        android:clickable="true"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        android:clipToPadding="true"
        android:background="@drawable/fab_btn_corner"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/add_note_description"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_margin="16sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/inner_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/add_note_description"
            android:elevation="0dp"
            android:src="@drawable/ic_round_add_24"
            android:tint="@color/white"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:useCompatPadding="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chatFabText"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/add_note"
            android:textColor="@color/white"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>